js262/test/language/module-code/parse-err-decl-pos-import-do-while.js


/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

do import v from './decl-pos-import-do-while.js'; while (false)
